Changed PriceOfferTemplate object. (#66)
